--- a/css/index.scss
+++ b/css/index.scss
@@ -224,7 +224,11 @@ h1, h2, h3, h4, h5, h6{
         outline: none;
       }
     } 
-    .submitbtn{
+  }
+  .submitbtn{
+    display: flex;
+    justify-content: space-between;
+    input{
       display: block;
       background: #00cc98;
       color: #ffffff;
@@ -234,6 +238,11 @@ h1, h2, h3, h4, h5, h6{
       padding: 10px 25px;
       border-radius: 5px;
       margin-left: auto;
+      transition: all .6s;
+      &:hover{
+        background: #7cff25;
+        color: #018f6b;
+      }
     }
   }
 }
